# shadowfile

./: CHANGELOG.md  Cargo.toml  Dockerfile  README.md  build.rs  dist-workspace.toml  release.toml
.github/workflows/: build-aarch64.yml  build-x64.yml  build.yml
src/: fs.rs  lib.rs  platform.rs  utils.rs
src/platform/: linux.rs  macos.rs
