[package]
name = "shadowfile"
version = "0.1.0-dev.1"
edition = "2024"
build = "build.rs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/anoaky/shadowfile"

[dependencies]
anyhow = "1.0.102"
bimap = "0.6.3"
cc = "1.2.56"
lazy_static = "1.5.0"
libc = "0.2.182"
thiserror = "2.0.18"

[build-dependencies]
os_info = "3.14.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
